welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:24: error: missing arguments for method fleur in class FlowerPot;
follow this method with `_' if you want to treat it as a partially applied function
fleur 
^